# Simple-Music-Synthesizer

./: CMakeLists.txt  README.md
backend/: CMakeLists.txt  __CMakeLists.txt  main.cpp
backend/include/: EnvelopeGenerator.h  MusicPlayer.h  Synthesizer.h
backend/include/components/: Effect.h  EnvelopeGenerator.h  Filter.h  LFO.h  Mixer.h  Oscillator.h
backend/include/components/effects/: Chorus.h  Delay.h  Distortion.h  Equilizer.h  PitchShifter.h  Reverb.h  Tremolo.h
backend/include/effects/: Delay.h
backend/include/utils/: AudioOutput.h  Functional.h  Key.h  MIDIHandler.h  Note.h
backend/src/: LFO.cpp  MusicPlayer.cpp  Synthesizer.cpp
backend/src/api/: API_settings.md
backend/src/components/: EnvelopeGenerator.cpp  Filter.cpp  Mixer.cpp  Oscillator.cpp
backend/src/components/effects/: Chorus.cpp  Delay.cpp  Distortion.cpp  Equilizer.cpp  PitchShifter.cpp  Reverb.cpp  Tremolo.cpp
backend/src/effects/: Delay.cpp
backend/src/utils/: AudioOutput.cpp  Functional.cpp  Key.cpp  MIDIHandler.cpp  Note.cpp
frontend/: CMakeLists.txt  SynthesizerUI.h  main.cpp
frontend/include/: SynthesizerUI.h  UI.h
frontend/include/components/: EffectGroup.h  EnvelopePanel.h  FilterPanel.h  OscillatorControlPanel.h
frontend/resources/: SynthesizerUI.ui
frontend/src/: SynthesizerUI.cpp  UI.cpp  main.cpp
frontend/src/components/: EffectGroup.cpp  EnvelopePanel.cpp  FilterPanel.cpp  OscillatorControlPanel.cpp
resources/: midi_notes.json
